--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: ">=2.17.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -36,6 +36,8 @@ dependencies:
   connectivity_plus: ^2.3.5
   cached_network_image: ^3.2.1
   extended_image: ^6.2.1
+
+  country_pickers: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
