--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cached_network_image: ^3.2.1
   extended_image: ^6.2.1
 
+  flutter_native_splash: ^2.2.14
   country_pickers: ^2.0.0
   flutter_svg: ^1.1.6
 
@@ -98,3 +99,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/logo_lg.png
