--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_native_splash: ^2.2.14
   country_pickers: ^2.0.0
   flutter_svg: ^1.1.6
+  google_maps_flutter: ^2.2.1
 
 
 
