--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cached_network_image: ^3.2.1
   extended_image: ^6.2.1
 
-  flutter_native_splash: ^2.2.14
+  flutter_native_splash: ^2.2.9
   country_pickers: ^2.0.0
-  flutter_svg: ^1.1.6
+  intl: ^0.17.0
   google_maps_flutter: ^2.2.1
 
 
